--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,6 @@ java {
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+   systemProperty "cucumber.options", System.getProperty("cucumber.options")
+    systemProperties System.getProperties();
 }
